<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InicioSesion">

    <TextView
        android:id="@+id/LabelInicioSesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/text_inicio"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SpUsage" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="295dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_email_usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_usuario"
            android:inputType="textAutoComplete"
            android:textColor="@color/black"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_contrasena_usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_contrasena"
            android:inputType="numberPassword"
            android:textColor="@color/black"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/ButtonIniciarSesion"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/verde_fofo"
        android:text="@string/button_ingresar"
        android:textColor="@color/black"
        android:textFontWeight="@integer/material_motion_duration_long_2"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
        tools:ignore="SpUsage,TextSizeCheck,UnusedAttribute" />

    <Button
        android:id="@+id/ButtonVolverInicioApp"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:backgroundTint="@color/verde_limon"
        android:text="@string/button_volver_inicio"
        android:textColor="@color/black"
        android:textFontWeight="@integer/material_motion_duration_long_2"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
        tools:ignore="SpUsage,TextSizeCheck,UnusedAttribute" />

</androidx.constraintlayout.widget.ConstraintLayout>