<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Inicio">

    <TextView
        android:id="@+id/textViewInicioSesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="459dp"
        android:text="@string/text_inicio"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="145dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewInicioSesion">

        <Button
            android:id="@+id/buttonRegistrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:backgroundTint="@color/verde_limon"
            android:text="@string/button_registro"
            android:textColor="@color/black"
            android:textSize="18dp"
            android:textStyle="bold"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/ButtonIniciarSesion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:backgroundTint="@color/verde_fofo"
            android:text="@string/button_inicio"
            android:textColor="@color/black"
            android:textSize="18dp"
            android:textStyle="bold"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>